force-app/main/default/objects/PNR_Accounting_Line__c/PNR_Accounting_Line__c.object-meta.xml
<CustomObject>
    <label>PNR Accounting Line (Old)</label>
    <nameField>
        <displayFormat>PAL-{000000000}</displayFormat>
        <label>PNR Accounting Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PNR Accounting Lines (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>