force-app/main/default/objects/PNR_Accounting_Line__c/fields/Actual_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Refund_Amount__c</fullName>
    <label>Actual Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>