force-app/main/default/objects/PNR_Accounting_Line__c/fields/Actual_Refund_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_Refund_Fee__c</fullName>
    <label>Actual Refund Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>