force-app/main/default/objects/PNR_Accounting_Line__c/fields/Actual_Total_Cost_to_TAD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Cost_to_TAD__c</fullName>
    <label>Actual Total Cost to TAD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>