force-app/main/default/objects/PNR_Accounting_Line__c/fields/base_fare__c.field-meta.xml
<CustomField>
    <fullName>base_fare__c</fullName>
    <label>Base Fare</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>