force-app/main/default/objects/PNR_Accounting_Line__c/fields/cash_fare__c.field-meta.xml
<CustomField>
    <fullName>cash_fare__c</fullName>
    <label>Cash Fare</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>