force-app/main/default/objects/PNR_Accounting_Line__c/fields/Client_Charged__c.field-meta.xml
<CustomField>
    <fullName>Client_Charged__c</fullName>
    <label>Client Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>