force-app/main/default/objects/PNR_Accounting_Line__c/fields/credit_tax__c.field-meta.xml
<CustomField>
    <fullName>credit_tax__c</fullName>
    <label>Credit Tax</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>