force-app/main/default/objects/PNR_Accounting_Line__c/fields/Date_of_Reissue__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Reissue__c</fullName>
    <label>Date of Reissue</label>
    <type>Date</type>
</CustomField>