force-app/main/default/objects/PNR_Accounting_Line__c/fields/document_number__c.field-meta.xml
<CustomField>
    <fullName>document_number__c</fullName>
    <inlineHelpText>Is also Ticket Number</inlineHelpText>
    <label>Document Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>