force-app/main/default/objects/PNR_Accounting_Line__c/fields/element_id__c.field-meta.xml
<CustomField>
    <fullName>element_id__c</fullName>
    <label>Element Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>