force-app/main/default/objects/PNR_Accounting_Line__c/fields/Error_Caused_By__c.field-meta.xml
<CustomField>
    <fullName>Error_Caused_By__c</fullName>
    <label>Error Caused By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger Error</fullName>
            </value>
            <value>
                <fullName>Sarah Marinatos</fullName>
            </value>
            <value>
                <fullName>Salome Seikot</fullName>
            </value>
            <value>
                <fullName>Clint Gilmore</fullName>
            </value>
            <value>
                <fullName>Madelene Mooney-Smith</fullName>
            </value>
            <value>
                <fullName>Heather Mckenzie</fullName>
            </value>
            <value>
                <fullName>Rachael Easterbrook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>