force-app/main/default/objects/PNR_Accounting_Line__c/fields/fare_application__c.field-meta.xml
<CustomField>
    <fullName>fare_application__c</fullName>
    <label>Fare Application</label>
    <length>25</length>
    <type>Text</type>
</CustomField>