force-app/main/default/objects/PNR_Accounting_Line__c/fields/pnr__c.field-meta.xml
<CustomField>
    <fullName>pnr__c</fullName>
    <label>PNR</label>
    <referenceTo>PNR__c</referenceTo>
    <relationshipLabel>PNR Accounting Lines</relationshipLabel>
    <relationshipName>PNR_Accounting_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>