force-app/main/default/objects/PNR_Accounting_Line__c/fields/Refund_Amount_Expected__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount_Expected__c</fullName>
    <label>Refund Amount Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>