force-app/main/default/objects/PNR_Accounting_Line__c/fields/Refund_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Number__c</fullName>
    <label>Refund Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>