force-app/main/default/objects/PNR_Accounting_Line__c/fields/Refund_Remittance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Remittance_Due_Date__c</fullName>
    <label>Refund Remittance Due Date</label>
    <type>Date</type>
</CustomField>