force-app/main/default/objects/PNR_Accounting_Line__c/fields/Reissue_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Reissue_Service_Fee__c</fullName>
    <label>Reissue Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>