force-app/main/default/objects/PNR_Accounting_Line__c/fields/sabre_id__c.field-meta.xml
<CustomField>
    <fullName>sabre_id__c</fullName>
    <label>Sabre Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>