force-app/main/default/objects/PNR_Accounting_Line__c/fields/sectors__c.field-meta.xml
<CustomField>
    <fullName>sectors__c</fullName>
    <label>Sectors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>