force-app/main/default/objects/PNR_Accounting_Line__c/fields/tarriff_basis__c.field-meta.xml
<CustomField>
    <fullName>tarriff_basis__c</fullName>
    <label>Tarriff Basis</label>
    <length>10</length>
    <type>Text</type>
</CustomField>