force-app/main/default/objects/PNR_Accounting_Line__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>