force-app/main/default/objects/PNR_Accounting_Line__c/fields/Type_of_Reissue__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Reissue__c</fullName>
    <label>Type of Reissue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pax Voluntary Change</fullName>
            </value>
            <value>
                <fullName>Pax Name Error (Pax at Fault)</fullName>
            </value>
            <value>
                <fullName>Ticket Consultant Error</fullName>
            </value>
            <value>
                <fullName>Res/CS Error</fullName>
            </value>
            <value>
                <fullName>Communication/Internal Process Error</fullName>
            </value>
            <value>
                <fullName>IT/Development Error</fullName>
            </value>
            <value>
                <fullName>Airline Invol. Schedule Change including cost</fullName>
            </value>
            <value>
                <fullName>Due to COVID restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>