force-app/main/default/objects/PNR_Accounting_Line__c/validationRules/Client_Charged_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Charged_Validation</fullName>
    <active>true</active>
    <description>Validation - if Error Caused = &quot;Passenger Error&quot; then Client Charge must not be null</description>
    <errorConditionFormula>AND(
ISPICKVAL( Error_Caused_By__c , &quot;Passenger Error&quot;) ,
ISBLANK( Client_Charged__c ) 
)</errorConditionFormula>
    <errorDisplayField>Client_Charged__c</errorDisplayField>
    <errorMessage>Field must be populated if Error caused by Passenger</errorMessage>
</ValidationRule>